<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp"
    android:background="#6bf"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageButton
        android:id = "@+id/dismiss"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="end"
        android:src = "@drawable/close"
        android:background="@null"
        android:scaleType="fitXY"
        android:paddingBottom="5sp"
        android:layout_above="@id/optiontable"/>


    <TableLayout
        android:id = "@+id/optiontable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TableRow>
            <Button
                android:id="@+id/swap_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swap_language"
                android:textColor="#6bf"
                android:layout_weight="1"
                android:padding="5sp"
                android:background="@drawable/button_color"
                android:gravity="center"/>
        </TableRow>

        <Space android:layout_height="10sp"
            tools:ignore="SmallSp" />

        <TableRow>
            <Button
                android:id="@+id/listening_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listening_comprehension"
                android:textColor="#6bf"
                android:layout_weight="1"
                android:padding="5sp"
                android:background="@drawable/button_color"
                android:gravity="center"/>
        </TableRow>

        <Space android:layout_height="10sp"
            tools:ignore="SmallSp" />

        <!--<TableRow>-->
        <!--<Button-->
        <!--android:id="@+id/My_Words"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/my_words"-->
        <!--android:textColor="#FFF"-->
        <!--android:layout_weight="1"-->
        <!--android:padding="5sp"-->
        <!--android:background="@drawable/button_color"-->
        <!--android:gravity="center"/>-->
        <!--</TableRow>-->

        <!--<Space android:layout_height="10sp"-->
            <!--tools:ignore="SmallSp" />-->


        <TableRow>
            <Button
                android:id="@+id/current_Words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_words"
                android:textColor="#6bf"
                android:layout_weight="1"
                android:padding="5sp"
                android:background="@drawable/button_color"
                android:gravity="center"/>
        </TableRow>

        <Space android:layout_height="10sp"
            tools:ignore="SmallSp" />


        <!--<TableRow>-->
            <!--<Button-->
                <!--android:id="@+id/New_Game_popup"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/new_game"-->
                <!--android:textColor="#FFF"-->
                <!--android:layout_weight="1"-->
                <!--android:padding="5sp"-->
                <!--android:background="@drawable/button_color"-->
                <!--android:gravity="center"/>-->
        <!--</TableRow>-->

        <!--<Space android:layout_height="10sp"-->
            <!--tools:ignore="SmallSp" />-->

        <TableRow>
            <Button
                android:id="@+id/instructions_pop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textColor="#6bf"
                android:layout_weight="1"
                android:padding="5sp"
                android:background="@drawable/button_color"
                android:gravity="center"/>
        </TableRow>

        <Space android:layout_height="10sp"
            tools:ignore="SmallSp" />

        <TableRow>
            <Button
                android:id="@+id/Achievement_pop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_color"
                android:text="@string/achievements"
                android:textColor="#F00"
                android:layout_weight="1"
                android:padding="5sp"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

    </LinearLayout>
</RelativeLayout>